--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,6 +12,8 @@ jobs:
   setup:
     name: Compile Code
     runs-on: ubuntu-latest
+    container:
+      image: epidata/fpcbuild:3.2.0-13
 
     steps:
       - name: Checkout code
